сделал файл стилей удобочитаемым

--- a/httpdocs/wa-data/public/shop/themes/profitbuy/amazing.css
+++ b/httpdocs/wa-data/public/shop/themes/profitbuy/amazing.css
@@ -1,42 +1,285 @@
-﻿.art-itemscope:hover .item-typename{display:none}.mask-hide{opacity:0.2}section.sellerslist{display:none}
-.thumbs .summary{display:none}#product-core-image{min-height:365px}.item-thumb.pens-img img{height:auto !important}.paging-nav,.opacity-btn{display:none !important}.art-pagination{display:-webkit-flex;display:-moz-flex;display:-ms-flex;display:-o-flex;display:justify-content: center;justify-content:center;display:flex;margin-bottom:15px}.art-pgn-left{background:url('/wa-data/public/site/themes/profitbuy/img/pgn-left.png') no-repeat center}.art-pgn-right{background:url('/wa-data/public/site/themes/profitbuy/img/pgn-right.png') no-repeat center}.art-pgn-left,.art-pgn-right{background-color:#fff !important;border:1px solid #d1d1d1 !important;padding:21px !important}.art-als-pagination{text-align:center}.pgn-btn{border:1px solid #cbcbcb;padding:5px 10px}.pagination-text{display:flex;display:-webkit-flex;flex-direction:column;-webkit-flex-direction:column;justify-content:center;-webkit-justify-content:center;padding:5px 5px 5px 12px}.art-pagination > input{font-family:"Myriad Pro";font-size:24px;text-align:center;width:25px;border:1px solid #d1d1d1}.pagination-text span{font-family:"Myriad Pro";font-size:24px}.list .no-avilable-list{width:100% !important}.thumbs .noavilable-text{display:none}.thumbs .price.nowrap.art-thumbs-price.price-noavilable{left:0}.list table.features,.short-list table.features,.thumbs table.features{display:none}.pl-item-wrapper.art-pl-item-wrapper > span{color:#000;position:relative;top:-3px;z-index:10001}.t2 h2{margin-bottom:0}.t4 h4{padding-top:20px}.pl-item-info-expandable h5{margin:0 !important;word-wrap:break-word}.list .type-uzel > span{text-transform:uppercase;font-size:14px;font-family:"Myriad Pro_bold";word-wrap:break-word;position:relative;top:15px}.product-list.expandable.colored.list li{padding:0}.list .second-type,.thumbs .second-type{font-size:14px;background-color:#B50003 !important;font-weight:normal;font-family:"Myriad Pro_Semibold"}.list .product-list.expandable.colored.list > li{padding:3px}.list .mdi-2x[class*="mdi-"]::before{font-size:1.7em}.list .out-of-stock.top-align{text-align:center}.short-list .stock-label.stock-high{display:none}.short-list li .pl-item-info-expandable,ul.product-list.short-list li .offers{display:table-cell;vertical-align:baseline !important}.short-list .pl-item-info-expandable{width:800px}.short-list .row-line{display:flex;-webkit-display:flex;justify-content:space-between;-webkit-justify-content:space-between}.short-list .price_and_stock{width:100px}.list .prise-wrapper .type-uzel{display:none}.short-list .prise-wrapper .type-uzel{display:none}.thumbs .row-line .type-uzel{display:none;font-size:0.9em}.thumbs .type-uzel{font-size:1.2em}.short-list .price_and_stock{position:relative;top:-5px}.short-list .prise-wrapper{padding-left:50px}.short-list .offers{position:relative;top:-8px}.short-list .out-of-stock{width:190px;padding-right:10px}
+﻿.art-itemscope:hover .item-typename {
+    display: none
+}
+
+.mask-hide {
+    opacity: 0.2
+}
+
+section.sellerslist {
+    display: none
+}
+
+.thumbs .summary {
+    display: none
+}
+
+#product-core-image {
+    min-height: 365px
+}
+
+.item-thumb.pens-img img {
+    height: auto !important
+}
+
+.paging-nav,
+.opacity-btn {
+    display: none !important
+}
+
+.art-pagination {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: justify-content: center;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 15px
+}
+
+.art-pgn-left {
+    background: url('/wa-data/public/site/themes/profitbuy/img/pgn-left.png') no-repeat center
+}
+
+.art-pgn-right {
+    background: url('/wa-data/public/site/themes/profitbuy/img/pgn-right.png') no-repeat center
+}
+
+.art-pgn-left,
+.art-pgn-right {
+    background-color: #fff !important;
+    border: 1px solid #d1d1d1 !important;
+    padding: 21px !important
+}
+
+.art-als-pagination {
+    text-align: center
+}
+
+.pgn-btn {
+    border: 1px solid #cbcbcb;
+    padding: 5px 10px
+}
+
+.pagination-text {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    justify-content: center;
+    -webkit-justify-content: center;
+    padding: 5px 5px 5px 12px
+}
+
+.art-pagination>input {
+    font-family: "Myriad Pro";
+    font-size: 24px;
+    text-align: center;
+    width: 25px;
+    border: 1px solid #d1d1d1
+}
+
+.pagination-text span {
+    font-family: "Myriad Pro";
+    font-size: 24px
+}
+
+.list .no-avilable-list {
+    width: 100% !important
+}
+
+.thumbs .noavilable-text {
+    display: none
+}
+
+.thumbs .price.nowrap.art-thumbs-price.price-noavilable {
+    left: 0
+}
+
+.list table.features,
+.short-list table.features,
+.thumbs table.features {
+    display: none
+}
+
+.pl-item-wrapper.art-pl-item-wrapper>span {
+    color: #000;
+    position: relative;
+    top: -3px;
+    z-index: 10001
+}
+
+.t2 h2 {
+    margin-bottom: 0
+}
+
+.t4 h4 {
+    padding-top: 20px
+}
+
+.pl-item-info-expandable h5 {
+    margin: 0 !important;
+    word-wrap: break-word
+}
+
+.list .type-uzel>span {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-family: "Myriad Pro_bold";
+    word-wrap: break-word;
+    position: relative;
+    top: 15px
+}
+
+.product-list.expandable.colored.list li {
+    padding: 0
+}
+
+.list .second-type,
+.thumbs .second-type {
+    font-size: 14px;
+    background-color: #B50003 !important;
+    font-weight: normal;
+    font-family: "Myriad Pro_Semibold"
+}
+
+.list .product-list.expandable.colored.list>li {
+    padding: 3px
+}
+
+.list .mdi-2x[class*="mdi-"]::before {
+    font-size: 1.7em
+}
+
+.list .out-of-stock.top-align {
+    text-align: center
+}
+
+.short-list .stock-label.stock-high {
+    display: none
+}
+
+.short-list li .pl-item-info-expandable,
+ul.product-list.short-list li .offers {
+    display: table-cell;
+    vertical-align: baseline !important
+}
+
+.short-list .pl-item-info-expandable {
+    width: 800px
+}
+
+.short-list .row-line {
+    display: flex;
+    -webkit-display: flex;
+    justify-content: space-between;
+    -webkit-justify-content: space-between
+}
+
+.short-list .price_and_stock {
+    width: 100px
+}
+
+.list .prise-wrapper .type-uzel {
+    display: none
+}
+
+.short-list .prise-wrapper .type-uzel {
+    display: none
+}
+
+.thumbs .row-line .type-uzel {
+    display: none;
+    font-size: 0.9em
+}
+
+.thumbs .type-uzel {
+    font-size: 1.2em
+}
+
+.short-list .price_and_stock {
+    position: relative;
+    top: -5px
+}
+
+.short-list .prise-wrapper {
+    padding-left: 50px
+}
+
+.short-list .offers {
+    position: relative;
+    top: -8px
+}
+
+.short-list .out-of-stock {
+    width: 190px;
+    padding-right: 10px
+}
 
 @keyframes blinkRed {
- 0%, 100% { color: rgba(0, 0, 0, 0.87); }
- 50% { color: rgba(255, 0, 0, 1); }
-}
-@-webkit-keyframes blinkRed {
- 0%, 100% { color: rgba(0, 0, 0, 0.87); }
- 50% { color: rgba(255, 0, 0, 1); }
-}
-@-o-keyframes blinkRed {
- 0%, 100% { color: rgba(0, 0, 0, 0.87); }
- 50% { color: rgba(255, 0, 0, 1); }
-}
-@-moz-keyframes blinkRed {
- 0%, 100% { color: rgba(0, 0, 0, 0.87); }
- 50% { color: rgba(255, 0, 0, 1); }
-}
-.needChange {
-  animation: blinkRed .5s ease-in-out infinite;
-  -webkit-animation: blinkRed .5s ease-in-out infinite;
-  -o-animation: blinkRed .5s ease-in-out infinite;
-  -moz-animation: blinkRed .5s ease-in-out infinite;
-}
-.slider-hint {
-  color: rgb(255, 0, 0);
-  text-transform: uppercase;
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  bottom: -30px;
-  display: block;
-  left: 0;
-  font-weight: bold;
-  font-size: 14px;
+    0%,
+    100% {
+        color: rgba(0, 0, 0, 0.87);
+    }
+    50% {
+        color: rgba(255, 0, 0, 1);
+    }
 }
 
+@-webkit-keyframes blinkRed {
+    0%,
+    100% {
+        color: rgba(0, 0, 0, 0.87);
+    }
+    50% {
+        color: rgba(255, 0, 0, 1);
+    }
+}
+
+@-o-keyframes blinkRed {
+    0%,
+    100% {
+        color: rgba(0, 0, 0, 0.87);
+    }
+    50% {
+        color: rgba(255, 0, 0, 1);
+    }
+}
+
+@-moz-keyframes blinkRed {
+    0%,
+    100% {
+        color: rgba(0, 0, 0, 0.87);
+    }
+    50% {
+        color: rgba(255, 0, 0, 1);
+    }
+}
+
+.needChange {
+    animation: blinkRed .5s ease-in-out infinite;
+    -webkit-animation: blinkRed .5s ease-in-out infinite;
+    -o-animation: blinkRed .5s ease-in-out infinite;
+    -moz-animation: blinkRed .5s ease-in-out infinite;
+}
+
+.slider-hint {
+    color: rgb(255, 0, 0);
+    text-transform: uppercase;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: -30px;
+    display: block;
+    left: 0;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+
 /*эти стили нужны для корректного отображения списков на главной*/
+
 section.sellerslist.visible {
     display: block;
 }
@@ -49,4 +292,8 @@ section.sellerslist.visible {
     left: 36px;
     width: 150px;
     background-color: transparent !important;
+}
+
+.test-to-git {
+    color: red;
 }
